Created sendPayment function. Created new state formData/setFormData to deal with importing form fields. Created handleChange function, passed through context. Finished handleSubmit function. Added a useState isLoading/SetIsLoading for the hero page during blockchain transactions. Created new useState transactioinCount/setTransactionCount to monitor the number of transactions.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
   display: inline-block;
   position: absolute;
   top: 0;
-  background-color: #999;
+  background-color: #fff;
   border-radius: 100%;
   
   -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
