--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,3 +72,7 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
     -webkit-transform: scale(1.0);
   }
 }
+
+.card-image {
+  border: 6px black solid
+}
