Finished styling the main home page for all screen sizes. All finished. Then created Modal.jsx and started creating a modal component. Finished the modal component and did a ton of styling for all the screen sizes. Finished completely the page. Forgot to commit to get Git and already started the about page. Imported the Navbar and Footer components, set the bg, and now am preparing to work on the Main component.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,3 +110,12 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
   text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0829be,
     0 0 82px #0d2bb1, 0 0 92px #0c28a8, 0 0 102px #092086, 0 0 151px #050d33;
 }
+
+.show-modal {
+  visibility: visible;
+  z-index: 10;
+}
+.hide-modal {
+  visibility: invisible;
+  z-index: -10;
+}
