--- a/styles/globals.css
+++ b/styles/globals.css
@@ -135,25 +135,25 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
 .prev,
 .next {
   position: absolute;
-  top: 200px;
+  top: 360px;
+  left: 270px;
+  transform: translateX(-28%);
   margin:0 1rem;
-  transform: translateY(-100%);
-  background: blue;
-  color: white;
-  width: 1.25rem;
+
+  
+  color: #00bfff;
+  
+  width: 2.95rem;
   height: 1.25rem;
   display: grid;
   place-items: center;
   border-color: transparent;
-  font-size: 2rem;
+  font-size: 3rem;
   border-radius: 1rem;
   cursor: pointer;
   transition: all;
 }
-.prev:hover,
-.next:hover {
-  background: red;
-}
+
 .prev {
   left: 0;
 }
