Started on Blog.jsx. Added blogsPost data into the data.jsx file. I do not want to add unneccessary task to this project and so for now instead of converting all of the blogs I have into markup and then building out a blog component I will simply reuse the slider component from the images and allow the post to be selected and red by button click. Will rerender using a markup built component after the next project is finished which actually requires one and it is not critical that this one be like that before launch. To do this I brought in the readMore/setReadMore from the HeroContext to use to toggle the button to display the full length text. Styled the buttons and card to make different from the slider above. Component finished.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,6 +153,27 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
   cursor: pointer;
   transition: all;
 }
+.prevA,
+.nextA {
+  position: absolute;
+  top: 120px;
+  left: 293px;
+  transform: translateX(-10%);
+  margin:0 1rem;
+
+  
+  color: #00bfff;
+  
+  width: 2.95rem;
+  height: 1.25rem;
+  display: grid;
+  place-items: center;
+  border-color: transparent;
+  font-size: 3rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  transition: all;
+}
 
 .prev {
   left: 0;
@@ -160,3 +181,10 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
 .next {
   right: 0;
 }
+.prevA {
+  left: 0;
+}
+.nextA {
+  right: 0;
+}
+
