--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,3 +188,18 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
   right: 0;
 }
 
+.prevMd,
+.nextMd {
+  position: absolute;
+  top: 120px;
+  left: 293px;
+  transform: translateX(-10%);
+  margin:0 1rem;
+}
+  
+.prevMd {
+  left: 0;
+}
+.nextMd {
+  right: 0;
+}
