--- a/styles/globals.css
+++ b/styles/globals.css
@@ -201,3 +201,7 @@ radial-gradient(at 34% 37%, hsla(96,79%,67%,1) 0, transparent 40%);
 .nextMd {
   right: 0;
 }
+
+.image-bg{
+background-image: url('/images/ashley-defi-hero-2.png')
+}
